--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "tbo-hackathon-backend",
-  "version": "1.0.0",
-  "description": "This is backend code for tboHackathon",
-  "main": "index.js",
+  "name": "tbo-backend",
   "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server.js"
   },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.2",
+    "openai": "^4.24.1"
   }
 }
