--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2",
-    "openai": "^4.24.1"
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   }
 }
