--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
+    "sanitize-html": "^2.11.0",
     "url": "^0.11.3"
   }
 }
