--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "mongoose": "^8.0.3",
